Todo & auth: Fix z-index & improvement to Todo's styles

--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     background-color: rgba(0,0,0,0.7);
-    z-index: 1;
+    z-index: 20;
 }
 
 .authForm {
@@ -18,7 +18,6 @@
     box-shadow: inset 0 0 2px;
     height: auto;
     text-align: center;
-
     button {
         cursor: pointer;
     }
